# pp-analyzer

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
fine-tune/: .env.example  README.md  pyproject.toml
fine-tune/fine_tune/: annotation_utils.py  env.py  llm_utils.py  message_utils.py  stats_utils.py
fine-tune/notebooks/: 1-fine-tune-model.ipynb  2-evaluate-model.ipynb  3-calculate-evaluation-statistics.ipynb  brat-data-info.ipynb  development-meta.ipynb  job_preset.py  split_training_data.py  tmp.ipynb
fine-tune/src/: annotation_utils.py  env.py  utils.py
notebooks/: 1-fine-tune-model.ipynb  2-evaluate-model.ipynb  3-calculate-evaluation-statistics.ipynb  annotation_utils.py  brat-info.ipynb  development-meta.ipynb  job_preset.py  llm_utils.py  split_training_data.py
pp-analyze/: .env.example  .gitignore  README.md  pyproject.toml
pp-analyze/notebooks/: pp_analyze.ipynb
pp-analyze/pp_analyze/: __init__.py  data_model.py  dtou.py  hierarchy_helper.py  kg.py  pp_analyze.py  statistics.py  user_preference_analyze.py  utils.py  website_compliance_evaluation.py
pp_analyze/: __init__.py  data_model.py  dtou.py  kg.py  policy_text_utils.py  pp_analyze.py  query_helper.py  statistics.py
pp_analyze/prompt/: __init__.py  preprocess.py
pp_analyze/recognition/: __init__.py  data_model.py  db.py  query_helper.py  (+3 more)
ppa-commons/: README.md  pyproject.toml
ppa_commons/: __init__.py  llm_result_handler.py
src/: annotation_utils.py  env.py  llm_utils.py  message_templates.py  message_utils.py  stats_utils.py  utils.py
visualize/: pyproject.toml
(+43 files in other folders)
