[tool.poetry]
name = "fine-tune"
version = "0.1.0"
description = ""
authors = ["renyuneyun (Rui Zhao) <renyuneyun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pybrat = {git = "https://github.com/renyuneyun/pybrat"}
openai = "^1.44.1"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
numpy = "^2.1.1"
pydantic = "^2.9.1"
scikit-learn = "^1.5.2"
json-repair = "^0.29.2"
pylcs = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
