[tool.poetry]
name = "pp-analyze"
version = "0.1.0"
description = ""
authors = ["renyuneyun (Rui Zhao) <renyuneyun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
openai = "^1.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
